ヘッダーの追加

--- a/css/style.css
+++ b/css/style.css
@@ -4,4 +4,83 @@ body {
   color: #111;
   font-family: "Noto Sans JP", sans-serif;
   background: #FAFAFA;
+}
+
+.header__inner {
+  display: flex;
+  justify-content: space-between;
+  padding: 22px 15px;
+}
+@media screen and (min-width: 768px) {
+  .header__inner {
+    padding-left: 30px;
+    padding-right: 30px;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.header__logo a img {
+  width: 100px;
+  display: block;
+}
+@media screen and (min-width: 768px) {
+  .header__logo a img {
+    width: 135px;
+  }
+}
+
+.header__nav {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .header__nav {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+  }
+}
+
+.header__link {
+  font-weight: 700;
+  letter-spacing: 0.48px;
+}
+
+.header__button {
+  font-weight: 700;
+  letter-spacing: 0.48px;
+  padding: 8px 30px;
+  display: inline-block;
+  border-radius: 60px;
+  border: 2px solid #111;
+  background: #fff;
+}
+
+@media screen and (min-width: 768px) {
+  .header__open {
+    display: none;
+  }
+}
+
+.drawer-icon {
+  width: 36px;
+  height: 21px;
+  position: relative;
+}
+
+.drawer-icon__bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 36px;
+  height: 3px;
+  border-radius: 6px;
+  background: #111;
+}
+.drawer-icon__bar:nth-of-type(2) {
+  top: 9px;
+}
+.drawer-icon__bar:nth-of-type(3) {
+  top: 18px;
 }/*# sourceMappingURL=style.css.map */
