--- a/sass/style.scss
+++ b/sass/style.scss
@@ -32,3 +32,89 @@ body {
   font-family: $font-family-ja;
   background: $background-base;
 }
+
+.header {}
+
+.header__inner {
+  display: flex;
+  justify-content: space-between;
+  padding: 22px 15px;
+
+  @include mq(pc) {
+    padding-left: 30px;
+    padding-right: 30px;
+    max-width: calc($width-inner + 30px * 2);
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.header__logo {
+  a {
+    img {
+      width: 100px;
+      display: block;
+
+      @include mq(pc) {
+        width: 135px;
+      }
+    }
+  }
+}
+
+.header__nav {
+  display: none;
+
+  @include mq(pc) {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+  }
+}
+
+.header__link {
+  font-weight: 700;
+  letter-spacing: 0.48px;
+}
+
+.header__button {
+  font-weight: 700;
+  letter-spacing: 0.48px;
+  padding: calc(10px - 2px) 30px;
+  display: inline-block;
+  border-radius: 60px;
+  border: 2px solid #111;
+  background: #fff;
+}
+
+.header__open {
+  @include mq(pc) {
+    display: none;
+  }
+}
+
+.drawer-icon {
+  width: 36px;
+  height: 21px;
+  position: relative;
+}
+
+.drawer-icon__bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 36px;
+  height: 3px;
+  border-radius: 6px;
+  background: #111;
+
+  &:nth-of-type(1) {}
+
+  &:nth-of-type(2) {
+    top: 9px;
+  }
+
+  &:nth-of-type(3) {
+    top: 18px;
+  }
+}
