--- a/css/style.css
+++ b/css/style.css
@@ -83,4 +83,129 @@ body {
 }
 .drawer-icon__bar:nth-of-type(3) {
   top: 18px;
+}
+
+.mv {
+  border-radius: 20px;
+  max-width: calc(100% - 30px);
+  margin-left: auto;
+  margin-right: auto;
+  background: linear-gradient(180deg, #F8B819 0%, #F0D320 100%);
+}
+@media screen and (min-width: 768px) {
+  .mv {
+    border-radius: 30px;
+    max-width: calc(100% - 60px);
+  }
+}
+
+.mv__inner {
+  padding: 50px 20px 255px;
+  position: relative;
+}
+@media screen and (min-width: 768px) {
+  .mv__inner {
+    padding-top: 110px;
+    padding-bottom: 109px;
+    padding-left: 30px;
+    padding-right: 30px;
+    max-width: 1100px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.mv__lead1,
+.mv__lead2 {
+  font-feature-settings: "palt" on;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 1;
+  letter-spacing: 2.2px;
+  border-radius: 5px;
+  background: #fff;
+  padding: 10px;
+  display: block;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media screen and (min-width: 768px) {
+  .mv__lead1,
+  .mv__lead2 {
+    margin-left: 0;
+    margin-right: 0;
+    font-size: 38px;
+    letter-spacing: 3.8px;
+    padding: 12px 16px;
+  }
+}
+
+.mv__lead2 {
+  margin-top: 8px;
+}
+@media screen and (min-width: 768px) {
+  .mv__lead2 {
+    margin-top: 14px;
+  }
+}
+
+.mv__description {
+  text-align: center;
+  letter-spacing: 0.48px;
+  font-weight: 700;
+  margin-top: 26px;
+}
+@media screen and (min-width: 768px) {
+  .mv__description {
+    text-align: left;
+    font-size: 18px;
+    letter-spacing: 0.54px;
+    margin-top: 20px;
+  }
+}
+
+.mv__button {
+  margin-top: 22px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .mv__button {
+    text-align: left;
+    margin-top: 30px;
+  }
+}
+.mv__button a {
+  text-align: center;
+  font-weight: 700;
+  letter-spacing: 0.48px;
+  color: #fff;
+  display: inline-block;
+  padding: 8px 28px;
+  border-radius: 60px;
+  border: 2px solid #fff;
+  background: #111;
+}
+
+.mv__image {
+  position: absolute;
+  right: 0;
+  bottom: -108px;
+  width: 100%;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .mv__image {
+    width: 57.6923076923%;
+    text-align: right;
+    bottom: -88px;
+  }
+}
+.mv__image img {
+  width: 345px;
+}
+@media screen and (min-width: 768px) {
+  .mv__image img {
+    width: 600px;
+  }
 }/*# sourceMappingURL=style.css.map */
