--- a/sass/style.scss
+++ b/sass/style.scss
@@ -118,3 +118,128 @@ body {
     top: 18px;
   }
 }
+
+
+.mv {
+  border-radius: 20px;
+  max-width: calc(100% - 15px * 2);
+  margin-left: auto;
+  margin-right: auto;
+  background: $color-gradation;
+
+  @include mq(pc) {
+    border-radius: 30px;
+    max-width: calc(100% - 30px * 2);
+  }
+}
+
+.mv__inner {
+  padding: 50px 20px 255px;
+  position: relative;
+
+  @include mq(pc) {
+    padding-top: 110px;
+    padding-bottom: 109px;
+    padding-left: 30px;
+    padding-right: 30px;
+    max-width: calc(1040px + 30px * 2);
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.mv__content {}
+
+.mv__lead {}
+
+.mv__lead1,
+.mv__lead2 {
+  font-feature-settings: "palt" on;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 1;
+  letter-spacing: 2.2px;
+  border-radius: 5px;
+  background: #fff;
+  padding: 10px;
+  display: block;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+
+  @include mq(pc) {
+    margin-left: 0;
+    margin-right: 0;
+    font-size: 38px;
+    letter-spacing: 3.8px;
+    padding: 12px 16px;
+  }
+}
+
+.mv__lead1 {}
+
+.mv__lead2 {
+  margin-top: 8px;
+
+  @include mq(pc) {
+    margin-top: 14px;
+  }
+}
+
+.mv__description {
+  text-align: center;
+  letter-spacing: 0.48px;
+  font-weight: 700;
+  margin-top: 26px;
+
+  @include mq(pc) {
+    text-align: left;
+    font-size: 18px;
+    letter-spacing: 0.54px;
+    margin-top: 20px;
+  }
+}
+
+.mv__button {
+  margin-top: 22px;
+  text-align: center;
+
+  @include mq(pc) {
+    text-align: left;
+    margin-top: 30px;
+  }
+
+  a {
+    text-align: center;
+    font-weight: 700;
+    letter-spacing: 0.48px;
+    color: #fff;
+    display: inline-block;
+    padding: calc(10px - 2px) calc(30px - 2px);
+    border-radius: 60px;
+    border: 2px solid #fff;
+    background: #111;
+  }
+}
+
+.mv__image {
+  position: absolute;
+  right: 0;
+  bottom: -108px;
+  width: 100%;
+  text-align: center;
+
+  @include mq(pc) {
+    width: calc(600px / 1040px * 100%);
+    text-align: right;
+    bottom: -88px;
+  }
+
+  img {
+    width: 345px;
+
+    @include mq(pc) {
+      width: 600px;
+    }
+  }
+}
