--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,18 @@ body {
   .header__inner {
     padding-left: 30px;
     padding-right: 30px;
+    padding-bottom: 21px;
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
   }
 }
 
+@media screen and (min-width: 768px) {
+  .header__logo {
+    padding-top: 6px;
+  }
+}
 .header__logo a img {
   width: 100px;
   display: block;
@@ -50,13 +56,16 @@ body {
 .header__button {
   font-weight: 700;
   letter-spacing: 0.48px;
-  padding: 8px 30px;
+  padding: 8px 28px;
   display: inline-block;
   border-radius: 60px;
   border: 2px solid #111;
   background: #fff;
 }
 
+.header__open {
+  margin-top: 3px;
+}
 @media screen and (min-width: 768px) {
   .header__open {
     display: none;
@@ -199,6 +208,7 @@ body {
     width: 57.6923076923%;
     text-align: right;
     bottom: -88px;
+    right: 30px;
   }
 }
 .mv__image img {
