--- a/sass/style.scss
+++ b/sass/style.scss
@@ -43,6 +43,7 @@ body {
   @include mq(pc) {
     padding-left: 30px;
     padding-right: 30px;
+    padding-bottom: 21px;
     max-width: calc($width-inner + 30px * 2);
     margin-left: auto;
     margin-right: auto;
@@ -50,6 +51,10 @@ body {
 }
 
 .header__logo {
+  @include mq(pc) {
+    padding-top: 6px;
+  }
+
   a {
     img {
       width: 100px;
@@ -80,7 +85,7 @@ body {
 .header__button {
   font-weight: 700;
   letter-spacing: 0.48px;
-  padding: calc(10px - 2px) 30px;
+  padding: calc(10px - 2px) calc(30px - 2px);
   display: inline-block;
   border-radius: 60px;
   border: 2px solid #111;
@@ -88,6 +93,8 @@ body {
 }
 
 .header__open {
+  margin-top: 3px;
+
   @include mq(pc) {
     display: none;
   }
@@ -233,6 +240,7 @@ body {
     width: calc(600px / 1040px * 100%);
     text-align: right;
     bottom: -88px;
+    right: 30px;
   }
 
   img {
