--- a/css/style.css
+++ b/css/style.css
@@ -275,4 +275,41 @@ body {
 
 .case__item {
   text-align: center;
+}
+.news {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.news__inner {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.news__card {
+  border-radius: 20px;
+  background: #fff;
+  box-shadow: 0px 9px 30px 0px #F4F4F4;
+  padding: 40px 12px;
+}
+
+.news__title {
+  font-family: "Montserrat", sans-serif;
+  font-size: 38px;
+  font-weight: 700;
+  line-height: 1;
+  letter-spacing: 3.8px;
+  text-align: center;
+}
+
+.news__link {
+  text-align: right;
+  margin-top: 22px;
+}
+.news__link a {
+  font-weight: 700;
+  line-height: 1;
+  display: inline-block;
+  border-bottom: 2px solid #111;
+  padding-bottom: 8px;
 }/*# sourceMappingURL=style.css.map */
