--- a/sass/style.scss
+++ b/sass/style.scss
@@ -301,3 +301,46 @@ body {
 
   img {}
 }
+
+
+.news {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.news__inner {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.news__card {
+  border-radius: 20px;
+  background: #fff;
+  box-shadow: 0px 9px 30px 0px #F4F4F4;
+  padding: 40px 12px;
+}
+.news__title {
+  font-family: $font-family-en;
+  font-size: 38px;
+  font-weight: 700;
+  line-height: 1;
+  letter-spacing: 3.8px;
+  text-align: center;
+}
+.news__lists {}
+.news__list {}
+.news__link {
+  text-align: right;
+  margin-top: 22px;
+
+  a {
+    font-weight: 700;
+    line-height: 1;
+    display: inline-block;
+    border-bottom: 2px solid #111;
+    padding-bottom: calc(10px - 2px);
+  }
+}
+.news-link {}
+.news-link__meta {}
+.news-link__date {}
+.news-link__label {}
+.news-link__title {}
