--- a/sass/style.scss
+++ b/sass/style.scss
@@ -306,16 +306,37 @@ body {
 .news {
   padding-top: 60px;
   padding-bottom: 60px;
+
+  @include mq(pc) {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
 }
 .news__inner {
   padding-left: 15px;
   padding-right: 15px;
+
+  @include mq(pc) {
+    padding-left: 30px;
+    padding-right: 30px;
+    max-width: calc($width-inner + 30px * 2);
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 .news__card {
   border-radius: 20px;
   background: #fff;
   box-shadow: 0px 9px 30px 0px #F4F4F4;
   padding: 40px 12px;
+
+  @include mq(pc) {
+    border-radius: 30px;
+    padding-top: 40px;
+    padding-bottom: 34px;
+    padding-left: calc(105px / 1140px * 100%);
+    padding-right: calc(105px / 1140px * 100%);
+  }
 }
 .news__title {
   font-family: $font-family-en;
@@ -324,12 +345,42 @@ body {
   line-height: 1;
   letter-spacing: 3.8px;
   text-align: center;
+
+  @include mq(pc) {
+    font-size: 50px;
+    letter-spacing: 5px;
+    text-align: left;
+  }
 }
-.news__lists {}
-.news__list {}
+.news__lists {
+  margin-top: 28px;
+
+  @include mq(pc) {
+    margin-top: 30px;
+  }
+}
+.news__list {
+  &:nth-child(n + 2) {
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      top: 0;
+      left: 0;
+      background: #E3E3E3;
+    }
+  }
+}
 .news__link {
   text-align: right;
   margin-top: 22px;
+
+  @include mq(pc) {
+    margin-top: 20px;
+  }
 
   a {
     font-weight: 700;
@@ -337,10 +388,60 @@ body {
     display: inline-block;
     border-bottom: 2px solid #111;
     padding-bottom: calc(10px - 2px);
+    vertical-align: top;
   }
 }
-.news-link {}
-.news-link__meta {}
-.news-link__date {}
-.news-link__label {}
+.news-link {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+
+  @include mq(pc) {
+    flex-direction: row;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    gap: 0;
+  }
+}
+.news-link__meta {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+
+  @include mq(pc) {
+    width: 247px;
+    flex-shrink: 0;
+    gap: 14px;
+  }
+}
+.news-link__date {
+  color: #333;
+  white-space: nowrap;
+
+  @include mq(pc) {
+    width: 119px;
+  }
+}
+.news-link__label {
+  color: #fff;
+  font-size: 11px;
+  font-weight: 700;
+  padding: 2px 10px;
+  border-radius: 2px;
+  background: #E4780C;
+  min-width: 63px;
+  text-align: center;
+
+  &.is-news {
+  background: #E4780C;
+  }
+  &.is-column {
+  background: #ECB815;
+  }
+  &.is-event {
+  background: #389B47;
+  }
+}
 .news-link__title {}
