--- a/sass/style.scss
+++ b/sass/style.scss
@@ -33,6 +33,18 @@ body {
   background: $background-base;
 }
 
+.hidden-sp {
+  @include mq(sp) {
+    display: none;
+  }
+}
+
+.hidden-pc {
+  @include mq(pc) {
+    display: none;
+  }
+}
+
 .header {}
 
 .header__inner {
@@ -263,15 +275,18 @@ body {
     padding-bottom: 50px;
   }
 }
+
 .case__inner {
   padding-left: 40px;
   padding-right: 40px;
+
   @include mq(pc) {
     max-width: calc(920px + 40px * 2);
     margin-left: auto;
     margin-right: auto;
   }
 }
+
 .case__title {
   font-size: 18px;
   font-weight: 700;
@@ -284,6 +299,7 @@ body {
     letter-spacing: 2px;
   }
 }
+
 .case__items {
   margin-top: 30px;
   display: grid;
@@ -296,6 +312,7 @@ body {
     gap: 26px 40px;
   }
 }
+
 .case__item {
   text-align: center;
 
@@ -312,6 +329,7 @@ body {
     padding-bottom: 50px;
   }
 }
+
 .news__inner {
   padding-left: 15px;
   padding-right: 15px;
@@ -324,6 +342,7 @@ body {
     margin-right: auto;
   }
 }
+
 .news__card {
   border-radius: 20px;
   background: #fff;
@@ -338,6 +357,7 @@ body {
     padding-right: calc(105px / 1140px * 100%);
   }
 }
+
 .news__title {
   font-family: $font-family-en;
   font-size: 38px;
@@ -352,6 +372,7 @@ body {
     text-align: left;
   }
 }
+
 .news__lists {
   margin-top: 28px;
 
@@ -359,6 +380,7 @@ body {
     margin-top: 30px;
   }
 }
+
 .news__list {
   &:nth-child(n + 2) {
     position: relative;
@@ -374,6 +396,7 @@ body {
     }
   }
 }
+
 .news__link {
   text-align: right;
   margin-top: 22px;
@@ -391,6 +414,7 @@ body {
     vertical-align: top;
   }
 }
+
 .news-link {
   display: flex;
   flex-direction: column;
@@ -405,6 +429,7 @@ body {
     gap: 0;
   }
 }
+
 .news-link__meta {
   display: flex;
   align-items: center;
@@ -416,6 +441,7 @@ body {
     gap: 14px;
   }
 }
+
 .news-link__date {
   color: #333;
   white-space: nowrap;
@@ -424,6 +450,7 @@ body {
     width: 119px;
   }
 }
+
 .news-link__label {
   color: #fff;
   font-size: 11px;
@@ -435,13 +462,129 @@ body {
   text-align: center;
 
   &.is-news {
-  background: #E4780C;
+    background: #E4780C;
   }
+
   &.is-column {
-  background: #ECB815;
+    background: #ECB815;
   }
+
   &.is-event {
-  background: #389B47;
+    background: #389B47;
   }
 }
+
 .news-link__title {}
+
+.about {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  overflow: hidden;
+
+  @include mq(pc) {
+    padding-top: 50px;
+    padding-bottom: 100px;
+  }
+}
+
+.about__inner {}
+
+.about__title {
+  text-align: center;
+
+  img {
+    width: 180px;
+
+    @include mq(pc) {
+      width: 230px;
+    }
+  }
+}
+
+.about__content {
+  margin-top: 150px;
+  padding-top: 288px;
+  padding-bottom: 105px;
+  position: relative;
+  text-align: center;
+
+  @include mq(pc) {
+    margin-top: 174px;
+    padding-top: 284px;
+    padding-bottom: 100px;
+  }
+
+  &::before {
+    content: "";
+    width: 1100px;
+    height: 1100px;
+    border-radius: 50%;
+    background: $color-gradation;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: -1;
+
+    @include mq(pc) {
+      width: 800px;
+      height: 800px;
+    }
+  }
+}
+
+.about__image {
+  position: absolute;
+  text-align: center;
+  top: -110px;
+  left: 0;
+  width: 100%;
+
+  @include mq(pc) {
+    top: -126px;
+  }
+
+  img {
+    width: 320px;
+
+    @include mq(pc) {
+      width: 330px;
+    }
+  }
+}
+
+.about__text {
+  font-weight: 700;
+  line-height: 2.3;
+}
+
+.about__pop {
+  margin-top: 42px;
+  font-weight: 700;
+  line-height: 1;
+  letter-spacing: 1.28px;
+
+  @include mq(pc) {
+    margin-top: 42px;
+  }
+}
+
+.about__button {
+  margin-top: 12px;
+
+  @include mq(pc) {
+    margin-top: 16px;
+  }
+
+  button {
+    font-weight: 700;
+    letter-spacing: 0.48px;
+    padding: calc(10px - 2px) calc(30px - 2px);
+    display: inline-block;
+    border-radius: 60px;
+    border: 2px solid #111;
+    background: #fff;
+    font-size: $font-size-base;
+    line-height: $line-height-base;
+  }
+}
