--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1175,3 +1175,343 @@ body {
     display: none;
   }
 }
+
+.contact {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: url(../img/section-bg.png) repeat top left / 529px auto;
+
+  @include mq(pc) {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+}
+
+.contact__inner {}
+
+.contact__box {
+  border-radius: 30px;
+  background: #fff;
+  padding: 60px 20px;
+
+  @include mq(pc) {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+
+.contact__title {}
+
+.contact__form {
+  margin-top: 30px;
+
+  @include mq(pc) {
+    margin-top: 50px;
+    max-width: 612px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.contact__fields {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.contact__field {}
+
+.contact__privacy {
+  margin-top: 29px;
+  text-align: center;
+}
+
+.contact__button {
+  margin-top: 29px;
+  text-align: center;
+
+  @include mq(pc) {
+    margin-top: 38px;
+  }
+}
+
+.form-field {
+  @include mq(pc) {
+    display: flex;
+    gap: 32px;
+  }
+}
+
+.form-field__head {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+
+  @include mq(pc) {
+    width: calc(212px - 32px);
+    flex-shrink: 0;
+    justify-content: flex-end;
+  }
+}
+
+.form-field__label {
+  font-weight: 700;
+  line-height: calc(23 / 16);
+}
+
+.form-field__tag {
+  display: inline-block;
+  border-radius: 2px;
+  background: #EE8013;
+  padding: 6px 8px 5px 8px;
+  color: #fff;
+  font-size: 11px;
+  font-weight: 700;
+  line-height: 1;
+  letter-spacing: 1.98px;
+
+  &.is-option {
+    background: #43B549;
+  }
+}
+
+.form-field__item {
+  margin-top: 15px;
+  flex-grow: 1;
+
+  @include mq(pc) {
+    margin-top: 0;
+  }
+
+  // [type="text"],
+  // [type="email"] {
+  //   width: 100%;
+  //   border-radius: 5px;
+  //   border: 3px solid #111;
+  //   background: #fff;
+  //   padding: 15px 16px 14px;
+  // }
+
+  // [type="radio"] {
+  //   width: 1px;
+  //   height: 1px;
+  //   position: absolute;
+  //   clip: rect(0, 0, 0, 0);
+  //   // clip-path: rect(0, 0, 0, 0);
+  //   overflow: hidden;
+
+  //   &:checked {
+  //     +.form-field__radio-text {
+  //       &::after {
+  //         opacity: 1;
+  //       }
+  //     }
+  //   }
+  // }
+
+  // select {
+  //   appearance: none;
+  //   width: 100%;
+  //   border-radius: 5px;
+  //   border: 3px solid #111;
+  //   background: #fff;
+  //   font-weight: 700;
+  //   padding: 15px 46px 14px 16px;
+  //   background: url(../img/select-arrow.png) no-repeat center right 16px / 9.451px 6.969px;
+  // }
+
+  // textarea {
+  //   border-radius: 5px;
+  //   border: 3px solid #111;
+  //   background: #fff;
+  //   width: 100%;
+  //   height: 180px;
+  //   padding: 16px;
+  // }
+}
+
+.form-text {
+  width: 100%;
+  border-radius: 5px;
+  border: 3px solid #111;
+  background: #fff;
+  padding: calc(15px - 3px) calc(16px - 3px) calc(14px - 3px);
+}
+
+.form-radio {
+  line-height: calc(23 / 16);
+}
+
+.form-radio__input {
+  width: 1px;
+  height: 1px;
+  position: absolute;
+  clip: rect(0, 0, 0, 0);
+  // clip-path: rect(0, 0, 0, 0);
+  overflow: hidden;
+
+  &:checked {
+    +.form-radio__text {
+      &::after {
+        opacity: 1;
+      }
+    }
+  }
+}
+
+.form-radio__text {
+  font-weight: 700;
+  padding-left: 28px;
+  position: relative;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    border-radius: 50%;
+  }
+
+  &::before {
+    width: 24px;
+    height: 24px;
+    border: 3px solid #111;
+    left: 0;
+  }
+
+  &::after {
+    width: 10px;
+    height: 10px;
+    background: #F5810E;
+    left: 7px;
+    opacity: 0;
+  }
+}
+
+.form-select {
+  appearance: none;
+  width: 100%;
+  border-radius: 5px;
+  border: 3px solid #111;
+  background: #fff;
+  font-weight: 700;
+  padding: calc(15px - 3px) calc(46px - 3px) calc(14px - 3px) calc(16px - 3px);
+  background: url(../img/select-arrow.png) no-repeat center right 14px / 9.451px 6.969px;
+}
+
+.form-textarea {
+  border-radius: 5px;
+  border: 3px solid #111;
+  background: #fff;
+  width: 100%;
+  height: 180px;
+  padding: calc(16px - 3px);
+}
+
+.form-field__radios {
+  display: flex;
+  flex-direction: column;
+  gap: 17px;
+
+  @include mq(pc) {
+    flex-direction: row;
+    gap: 30px;
+  }
+}
+
+.form-field__radio {}
+
+// .form-field__radio-text {
+//   font-weight: 700;
+//   padding-left: 28px;
+//   position: relative;
+
+//   &::before,
+//   &::after {
+//     content: "";
+//     position: absolute;
+//     top: 50%;
+//     transform: translateY(-50%);
+//     border-radius: 50%;
+//   }
+
+//   &::before {
+//     width: 24px;
+//     height: 24px;
+//     border: 3px solid #111;
+//     left: 0;
+//   }
+
+//   &::after {
+//     width: 10px;
+//     height: 10px;
+//     background: #F5810E;
+//     left: 7px;
+//     opacity: 0;
+//   }
+// }
+
+.form-checkbox {}
+
+.form-checkbox__input {
+  width: 1px;
+  height: 1px;
+  position: absolute;
+  clip: rect(0, 0, 0, 0);
+  // clip-path: rect(0, 0, 0, 0);
+  overflow: hidden;
+
+  &:checked {
+    +.form-checkbox__text {
+      &::after {
+        opacity: 1;
+      }
+    }
+  }
+}
+
+.form-checkbox__text {
+  position: relative;
+  padding-left: 30px;
+  font-size: 14px;
+  font-weight: 700;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  &::before {
+    width: 20px;
+    height: 20px;
+    border-radius: 1px;
+    border: 1px solid #111;
+
+    @include mq(pc) {
+      margin-top: 2px;
+    }
+  }
+
+  &::after {
+    width: 23px;
+    height: 17.53px;
+    left: -1px;
+    margin-top: -1.2px;
+    background: url(../img/check-icon.png) no-repeat center center / contain;
+    opacity: 0;
+
+    @include mq(pc) {
+      margin-top: 0.8px;
+    }
+  }
+
+  a {
+    text-decoration: underline;
+    font-weight: inherit;
+  }
+}
