cta, footer, pagetopの追加

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,11 @@ body {
   }
 }
 
+.inline-block {
+  font-weight: inherit;
+  display: inline-block;
+}
+
 .inner {
   padding-left: 15px;
   padding-right: 15px;
@@ -1313,4 +1318,61 @@ body {
 .form-checkbox__text a {
   text-decoration: underline;
   font-weight: inherit;
+}
+
+.cta {
+  background: linear-gradient(180deg, #F8B819 0%, #F0D320 100%);
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+@media screen and (min-width: 768px) {
+  .cta {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+.cta__text {
+  font-weight: 700;
+  line-height: 2;
+  letter-spacing: 0.48px;
+}
+@media screen and (min-width: 768px) {
+  .cta__text {
+    font-size: 18px;
+    letter-spacing: 0.54px;
+  }
+}
+
+.cta__button {
+  margin-top: 16px;
+}
+
+.footer {
+  background: #111;
+  padding-top: 8px;
+  padding-bottom: 12px;
+  text-align: center;
+}
+
+.footer__copyright {
+  color: #f5f5f5;
+  font-size: 12px;
+  line-height: 1;
+  letter-spacing: 0.96px;
+}
+
+.pagetop {
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  width: min(13.3333333333%, 50px);
+}
+@media screen and (min-width: 768px) {
+  .pagetop {
+    right: 16px;
+    bottom: 30px;
+    width: 76px;
+  }
 }/*# sourceMappingURL=style.css.map */
