--- a/sass/style.scss
+++ b/sass/style.scss
@@ -45,6 +45,11 @@ body {
   }
 }
 
+.inline-block {
+  font-weight: inherit;
+  display: inline-block;
+}
+
 .inner {
   padding-left: 15px;
   padding-right: 15px;
@@ -1513,5 +1518,70 @@ body {
   a {
     text-decoration: underline;
     font-weight: inherit;
+  }
+}
+
+.cta {
+  background: $color-gradation;
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+
+  @include mq(pc) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+.cta__inner {}
+
+.cta__text {
+  font-weight: 700;
+  line-height: 2;
+  letter-spacing: 0.48px;
+
+  @include mq(pc) {
+    font-size: 18px;
+    letter-spacing: 0.54px;
+  }
+}
+
+.cta__button {
+  margin-top: 16px;
+}
+
+.footer {
+  background: #111;
+  padding-top: 8px;
+  padding-bottom: 12px;
+  text-align: center;
+}
+
+.footer__inner {}
+
+.footer__copyright {
+  color: #f5f5f5;
+  font-size: 12px;
+  line-height: 1;
+  letter-spacing: 0.96px;
+}
+
+.pagetop {
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  width: min(calc(50 / 375 * 100%), 50px);
+
+  @include mq(pc) {
+    right: 16px;
+    bottom: 30px;
+    width: 76px;
+  }
+
+  img {
+    // width: 50px;
+
+    // @include mq(pc) {
+    // }
   }
 }
