--- a/css/style.css
+++ b/css/style.css
@@ -82,10 +82,18 @@ body {
   color: #111;
   min-width: 150px;
   text-align: center;
+  transition: background-color 0.3s, color 0.3s;
+}
+.button:hover {
+  background-color: #FABE00;
 }
 .button--type2 {
   background-color: #111;
   color: #fff;
+}
+.button--type2:hover {
+  background-color: #fff;
+  color: #111;
 }
 
 .header__inner {
@@ -133,6 +141,10 @@ body {
 .header__link {
   font-weight: 700;
   letter-spacing: 0.48px;
+  transition: color 0.3s;
+}
+.header__link:hover {
+  color: #F5810E;
 }
 
 .header__open {
@@ -414,9 +426,13 @@ body {
   font-weight: 700;
   line-height: 1;
   display: inline-block;
-  border-bottom: 2px solid #111;
+  border-bottom: 2px solid currentColor;
   padding-bottom: 8px;
   vertical-align: top;
+  transition: color 0.3s;
+}
+.news__link a:hover {
+  color: #FABE00;
 }
 
 .news-link {
@@ -425,6 +441,7 @@ body {
   gap: 7px;
   padding-top: 10px;
   padding-bottom: 10px;
+  transition: background-color 0.3s;
 }
 @media screen and (min-width: 768px) {
   .news-link {
@@ -433,6 +450,9 @@ body {
     padding-bottom: 12px;
     gap: 0;
   }
+}
+.news-link:hover {
+  background-color: #FFF9E5;
 }
 
 .news-link__meta {
@@ -1192,10 +1212,18 @@ body {
   border: 3px solid #111;
   background: #fff;
   padding: 12px 13px 11px;
+  transition: border-color 0.3s;
+}
+.form-text:hover, .form-text:focus {
+  border-color: #fabe00;
+  outline: none;
 }
 
 .form-radio {
   line-height: 1.4375;
+}
+.form-radio:hover .form-radio__text::before {
+  border-color: #fabe00;
 }
 
 .form-radio__input {
@@ -1207,6 +1235,9 @@ body {
 }
 .form-radio__input:checked + .form-radio__text::after {
   opacity: 1;
+}
+.form-radio__input:focus + .form-radio__text::before {
+  border-color: #fabe00;
 }
 
 .form-radio__text {
@@ -1226,6 +1257,7 @@ body {
   height: 24px;
   border: 3px solid #111;
   left: 0;
+  transition: border-color 0.3s;
 }
 .form-radio__text::after {
   width: 10px;
@@ -1244,6 +1276,11 @@ body {
   font-weight: 700;
   padding: 12px 43px 11px 13px;
   background: url(../img/select-arrow.png) no-repeat center right 14px/9.451px 6.969px;
+  transition: border-color 0.3s;
+}
+.form-select:hover, .form-select:focus {
+  border-color: #fabe00;
+  outline: none;
 }
 
 .form-textarea {
@@ -1253,6 +1290,11 @@ body {
   width: 100%;
   height: 180px;
   padding: 13px;
+  transition: border-color 0.3s;
+}
+.form-textarea:hover, .form-textarea:focus {
+  border-color: #fabe00;
+  outline: none;
 }
 
 .form-field__radios {
@@ -1267,6 +1309,10 @@ body {
   }
 }
 
+.form-checkbox:hover .form-checkbox__text::before {
+  border-color: #fabe00;
+}
+
 .form-checkbox__input {
   width: 1px;
   height: 1px;
@@ -1276,6 +1322,9 @@ body {
 }
 .form-checkbox__input:checked + .form-checkbox__text::after {
   opacity: 1;
+}
+.form-checkbox__input:focus + .form-checkbox__text::before {
+  border-color: #fabe00;
 }
 
 .form-checkbox__text {
@@ -1296,6 +1345,7 @@ body {
   height: 20px;
   border-radius: 1px;
   border: 1px solid #111;
+  transition: border-color 0.3s;
 }
 @media screen and (min-width: 768px) {
   .form-checkbox__text::before {
@@ -1318,6 +1368,10 @@ body {
 .form-checkbox__text a {
   text-decoration: underline;
   font-weight: inherit;
+  transition: color 0.3s;
+}
+.form-checkbox__text a:hover {
+  color: #F5810E;
 }
 
 .cta {
