qaセクションの作成

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1258,6 +1258,171 @@ body {
   }
 }
 
+.qa {
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @include mq(pc) {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+}
+
+.qa__inner {
+  @include mq(pc) {
+    padding-left: 30px;
+    padding-right: 30px;
+    max-width: calc(800px + 30px * 2);
+  }
+}
+
+.qa__title {}
+
+.qa__boxes {
+  margin-top: 52px;
+  display: flex;
+  flex-direction: column;
+  gap: 42px;
+
+  @include mq(pc) {
+    margin-top: 74px;
+  }
+}
+
+.qa__box {}
+
+.qa-box {
+  border-radius: 10px;
+  border: 3px solid #111;
+  background: #fff;
+
+  &.is-open {
+    .qa-box__head {
+      &::after {
+        transform: rotate(0);
+      }
+    }
+
+    // .qa-box__body {
+    //   display: block;
+    // }
+  }
+}
+
+.qa-box__head {
+  padding: calc(32px - 3px) calc(40px - 3px) calc(20px - 3px) calc(15px - 3px);
+  position: relative;
+  display: block;
+  width: 100%;
+
+  @include mq(pc) {
+    padding: calc(32px - 3px) calc(80px - 3px) calc(20px - 3px) calc(20px - 3px);
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 14px;
+    width: 9.26px;
+    height: 6.834px;
+    background: url(../img/qa-arrow.png) no-repeat center center / contain;
+    transform: rotate(180deg);
+    margin-top: 3px;
+
+    @include mq(pc) {
+      right: 18px;
+      margin-top: 2px;
+    }
+  }
+}
+
+.qa-box__head-icon {
+  font-family: $font-family-en;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 1;
+  display: grid;
+  place-items: center;
+  width: 44px;
+  height: 44px;
+  // letter-spacing: 2.2px;
+  border-radius: 22px;
+  border: 3px solid #111;
+  background: #f5810e;
+  position: absolute;
+  top: -26px;
+  left: 12px;
+
+  @include mq(pc) {
+    left: 17px;
+  }
+}
+
+.qa-box__head-text {
+  display: block;
+  text-align: left;
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 1.12px;
+
+  @include mq(pc) {
+    font-size: 16px;
+    line-height: 27px;
+    letter-spacing: 1.28px;
+  }
+}
+
+.qa-box__body {
+  padding: calc(10px + 3px) calc(17px - 3px) calc(20px - 3px) calc(15px - 3px);
+  display: none;
+
+  @include mq(pc) {
+    padding: calc(0px + 3px) calc(36px - 3px) calc(20px - 3px) calc(20px - 3px);
+  }
+}
+
+.qa-box__a {
+  display: flex;
+  gap: 8px;
+
+  @include mq(pc) {
+    gap: 10px;
+  }
+}
+
+.qa-box__a-icon {
+  font-family: $font-family-en;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 1;
+  display: grid;
+  place-items: center;
+  width: 44px;
+  height: 44px;
+  // letter-spacing: 2.2px;
+  border-radius: 22px;
+  border: 3px solid #111;
+  background: #FABE00;
+  flex-shrink: 0;
+}
+
+.qa-box__a-text {
+  display: block;
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 1.12px;
+  flex-grow: 1;
+  padding-top: 10px;
+
+  @include mq(pc) {
+    font-size: 16px;
+    line-height: 27px;
+    letter-spacing: 1.28px;
+    padding-top: 7px;
+  }
+}
+
 .contact {
   padding-top: 60px;
   padding-bottom: 60px;
