--- a/css/style.css
+++ b/css/style.css
@@ -1142,6 +1142,164 @@ body {
   }
 }
 
+.qa {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 768px) {
+  .qa {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .qa__inner {
+    padding-left: 30px;
+    padding-right: 30px;
+    max-width: 860px;
+  }
+}
+
+.qa__boxes {
+  margin-top: 52px;
+  display: flex;
+  flex-direction: column;
+  gap: 42px;
+}
+@media screen and (min-width: 768px) {
+  .qa__boxes {
+    margin-top: 74px;
+  }
+}
+
+.qa-box {
+  border-radius: 10px;
+  border: 3px solid #111;
+  background: #fff;
+}
+.qa-box.is-open .qa-box__head::after {
+  transform: rotate(0);
+}
+
+.qa-box__head {
+  padding: 29px 37px 17px 12px;
+  position: relative;
+  display: block;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .qa-box__head {
+    padding: 29px 77px 17px 17px;
+  }
+}
+.qa-box__head::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 14px;
+  width: 9.26px;
+  height: 6.834px;
+  background: url(../img/qa-arrow.png) no-repeat center center/contain;
+  transform: rotate(180deg);
+  margin-top: 3px;
+}
+@media screen and (min-width: 768px) {
+  .qa-box__head::after {
+    right: 18px;
+    margin-top: 2px;
+  }
+}
+
+.qa-box__head-icon {
+  font-family: "Montserrat", sans-serif;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 1;
+  display: grid;
+  place-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 22px;
+  border: 3px solid #111;
+  background: #f5810e;
+  position: absolute;
+  top: -26px;
+  left: 12px;
+}
+@media screen and (min-width: 768px) {
+  .qa-box__head-icon {
+    left: 17px;
+  }
+}
+
+.qa-box__head-text {
+  display: block;
+  text-align: left;
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 1.12px;
+}
+@media screen and (min-width: 768px) {
+  .qa-box__head-text {
+    font-size: 16px;
+    line-height: 27px;
+    letter-spacing: 1.28px;
+  }
+}
+
+.qa-box__body {
+  padding: 13px 14px 17px 12px;
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .qa-box__body {
+    padding: 3px 33px 17px 17px;
+  }
+}
+
+.qa-box__a {
+  display: flex;
+  gap: 8px;
+}
+@media screen and (min-width: 768px) {
+  .qa-box__a {
+    gap: 10px;
+  }
+}
+
+.qa-box__a-icon {
+  font-family: "Montserrat", sans-serif;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 1;
+  display: grid;
+  place-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 22px;
+  border: 3px solid #111;
+  background: #FABE00;
+  flex-shrink: 0;
+}
+
+.qa-box__a-text {
+  display: block;
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 1.12px;
+  flex-grow: 1;
+  padding-top: 10px;
+}
+@media screen and (min-width: 768px) {
+  .qa-box__a-text {
+    font-size: 16px;
+    line-height: 27px;
+    letter-spacing: 1.28px;
+    padding-top: 7px;
+  }
+}
+
 .contact {
   padding-top: 60px;
   padding-bottom: 60px;
