スムーススクロールの追加

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -25,6 +25,10 @@ $breakpoints: (
   }
 }
 
+// html {
+//   scroll-behavior: smooth; // auto or smooth
+// }
+
 body {
   font-size: $font-size-base;
   line-height: $line-height-base;
